# runwasi

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Makefile  NOTICE  README.md
.github/workflows/: action-test-smoke.yml  build-demo-img.yml  build-installable-img.yml  ci.yml  demo.yml  docker-demo.yml  full-testing.yml  llama2.yml  release.yml
WasmEdge/bindings/rust/wasmedge-sdk/src/: vm.rs
crates/containerd-shim-wasm/src/sandbox/: manager.rs  oci.rs  shim.rs
crates/containerd-shim-wasmedge/: Cargo.toml
crates/containerd-shim-wasmedge/src/: instance.rs
crates/wasi-demo-app/: build.rs
demo/: README.md
demo/images/: db.Dockerfile  hyper.Dockerfile  microservice_db.Dockerfile  preopens.Dockerfile  reqwest.Dockerfile  wasinn.Dockerfile
demo/utils/: build.rs  setup_wasinn_plugin.sh
docs/: windows-getting-started.md
release/: DockerfileAllInOne  DockerfileBin  DockerfileLib  docker-bake.hcl
release/utils/: copy_sys_dependencies.sh  dockerfile-utils.sh  install_dependencies.sh  push_imgs.sh
src/: error.rs  instance.rs  lib.rs  oci_utils.rs  oci_wasmedge.rs  runtime_utils.rs  wasmedge.rs
src/wasmedge/: instance.rs  mod.rs
test/image/: Cargo.toml  Dockerfile
test/k8s/: deploy.yaml
