[package]
name = "runwasi"
version = "0.1.0"
edition = "2021"

[dependencies]
containerd-shim = "0.3.0"
containerd-shim-wasm = { path = "crates/containerd-shim-wasm" }
log = "0.4"
ttrpc = "0.6"
wasmtime = "^0.35"
wasmtime-wasi = "^0.35"
wasi-common = "^0.35"
# wasmedge-sys = "0.9.0"
# wasmedge-sdk = "0.4.0"
# wasmedge-types = "0.2.1"
wasmedge-sys = { path = "./WasmEdge/bindings/rust/wasmedge-sys" }
wasmedge-sdk = { path = "./WasmEdge/bindings/rust/wasmedge-sdk" }
wasmedge-types = { path = "./WasmEdge/bindings/rust/wasmedge-types" }
chrono = "0.4.19"
anyhow = "1.0"
cap-std = "0.24.1"
oci-spec = "0.5"
thiserror = "1.0"
serde_json = "1.0"
libc = "0.2.132"
lazy_static = "1.4.0"

[dev-dependencies]
tempfile = "3.0"

[workspace]
members = ["crates/containerd-shim-wasm"]

[[bin]]
name = "containerd-shim-wasmedge-v1"
path = "src/bin/containerd-shim-wasmedge-v1/main.rs"

[[bin]]
name = "containerd-shim-wasmedged-v1"
path = "src/bin/containerd-shim-wasmedged-v1/main.rs"

[[bin]]
name = "containerd-wasmedged"
path = "src/bin/containerd-wasmedged/main.rs"

[profile.release]
panic = "abort"
