[package]
name = "runwasi"
version = "0.1.0"
edition = "2021"

[dependencies]
containerd-shim = "0.3.0"
containerd-shim-wasm = { path = "crates/containerd-shim-wasm" }
log = "0.4"
ttrpc = "0.6"
wasmedge-sys = { version = "0.10.0", optional = true }
wasmedge-sdk = { version = "0.5.0", optional = true }
wasmedge-types = { version = "0.3.0", optional = true }
chrono = "0.4.19"
anyhow = "1.0"
cap-std = "0.24.1"
oci-spec = "0.5"
thiserror = "1.0"
serde_json = "1.0"
libc = "0.2.132"
lazy_static = "1.4.0"
nix = "0.23"

[dev-dependencies]
tempfile = "3.0"

[features]
wasi_nn = ["wasmedge-sys/wasi_nn", "wasmedge-sdk/wasi_nn"]
wasmedge = ["wasmedge-sys", "wasmedge-sdk", "wasmedge-types"]

[workspace]
members = ["crates/containerd-shim-wasm"]

[[bin]]
name = "containerd-shim-wasmwasi-v1"
path = "src/bin/containerd-shim-wasmwasi-v1/main.rs"

[[bin]]
name = "containerd-shim-wasmwasid-v1"
path = "src/bin/containerd-shim-wasmwasid-v1/main.rs"

[[bin]]
name = "containerd-wasmwasid"
path = "src/bin/containerd-wasmwasid/main.rs"

[profile.release]
panic = "abort"
