[package]
name = "runwasi"
version = "0.1.0"
edition = "2021"

[dependencies]
containerd-shim = "0.3.0"
containerd-shim-wasm = { path = "crates/containerd-shim-wasm" }
log = "0.4"
ttrpc = "0.6"
wasmedge-sys = { version = "0.10.0", optional = true }
wasmedge-sdk = { version = "0.5.0", optional = true }
wasmedge-types = { version = "0.3.0", optional = true }
chrono = "0.4.19"
anyhow = "1.0"
cap-std = "0.24.1"
oci-spec = "0.5"
thiserror = "1.0"
serde_json = "1.0"
libc = "0.2.132"
lazy_static = "1.4.0"
nix = "0.23"

[dev-dependencies]
tempfile = "3.0"

[features]
wasmedge = ["wasmedge-sys", "wasmedge-sdk", "wasmedge-types"]
wasi_nn = ["wasmedge-sys/wasi_nn", "wasmedge-sdk/wasi_nn"]

[workspace]
members = ["crates/containerd-shim-wasm", "crates/wasi-demo-app", "crates/oci-tar-builder"]

[[bin]]
name = "containerd-shim-wasmedge-v1"
path = "src/bin/containerd-shim-wasmwasi-v1/main.rs"
required-features = ["wasmedge"]

[[bin]]
name = "containerd-shim-wasmedged-v1"
path = "src/bin/containerd-shim-wasmwasid-v1/main.rs"
required-features = ["wasmedge"]

[[bin]]
name = "containerd-wasmedged"
path = "src/bin/containerd-wasmwasid/main.rs"
required-features = ["wasmedge"]

[profile.release]
panic = "abort"
