[package]
name = "containerd-shim-wasmedge"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
containerd-shim = { workspace = true }
containerd-shim-wasm = { workspace = true }
log = { workspace = true }
oci-spec = { workspace = true, features = ["runtime"] }
ttrpc = { workspace = true }

wasmedge-sdk = { git = "https://github.com/WasmEdge/wasmedge-rust-sdk.git" }
wasmedge-sys = { git = "https://github.com/WasmEdge/wasmedge-rust-sdk.git" }

[dev-dependencies]
containerd-shim-wasm = { workspace = true, features = ["testing"] }
libc = { workspace = true }
serial_test = "*"

[features]
default = ["standalone", "static"]
standalone = ["wasmedge-sdk/standalone"]
static = ["wasmedge-sdk/static"]
wasi_nn = ["wasmedge-sdk/wasi_nn"]

[[bin]]
name = "containerd-shim-wasmedge-v1"
path = "src/main.rs"
